test: [PostServiceTest] 게시글 수정 기능 테스트 작성.