@@ -11,13 +11,11 @@ import com.hotnerds.tag.application.TagService;
 import com.hotnerds.tag.domain.Tag;
 import com.hotnerds.user.domain.User;
 import com.hotnerds.user.domain.repository.UserRepository;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.NullAndEmptySource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
@@ -81,7 +79,7 @@ public class PostServiceTest {
                 .title(post.getTitle())
                 .content(post.getContent())
                 .username(user.getUsername())
-                .tagNames(Arrays.asList(tag.getName()))
+                .tagNames(List.of(tag.getName()))
                 .build();
 
         when(postRepository.save(any(Post.class))).thenReturn(post);
@@ -105,7 +103,7 @@ public class PostServiceTest {
                 .title(post.getTitle())
                 .content(post.getContent())
                 .username(user.getUsername())
-                .tagNames(Arrays.asList(tag.getName()))
+                .tagNames(List.of(tag.getName()))
                 .build();
 
         when(userRepository.findByUsername(anyString())).thenThrow(new BusinessException(ErrorCode.USER_NOT_FOUND_EXCEPTION));
@@ -129,7 +127,7 @@ public class PostServiceTest {
                 .title(post.getTitle())
                 .content(post.getContent())
                 .username(user.getUsername())
-                .tagNames(Arrays.asList(tagName))
+                .tagNames(List.of(tagName))
                 .build();
 
         when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
@@ -249,7 +247,7 @@ public class PostServiceTest {
         when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
 
         //when then
-        assertThatThrownBy(() -> postService.deletePost(requestDto))
+        assertThatThrownBy(() -> postService.delete(requestDto))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.USER_NOT_FOUND_EXCEPTION.getMessage());
 
@@ -270,7 +268,7 @@ public class PostServiceTest {
         when(postRepository.findById(anyLong())).thenReturn(Optional.empty());
 
         //when then
-        assertThatThrownBy(() -> postService.deletePost(requestDto))
+        assertThatThrownBy(() -> postService.delete(requestDto))
                 .isInstanceOf(BusinessException.class)
                 .hasMessage(ErrorCode.POST_NOT_FOUND_EXCEPTION.getMessage());
 
@@ -291,7 +289,7 @@ public class PostServiceTest {
         when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
 
         //when
-        postService.deletePost(requestDto);
+        postService.delete(requestDto);
 
         //then
         verify(userRepository, times(1)).findByUsername(requestDto.getUsername());
@@ -403,4 +401,137 @@ public class PostServiceTest {
         verify(userRepository, times(1)).findByUsername(user.getUsername());
     }
 
+    @DisplayName("게시글 수정 성공")
+    @Test
+    void 게시글_수정_성공() {
+        //given
+        PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
+                .postId(post.getId())
+                .username(user.getUsername())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .tagNames(List.of(tag.getName()))
+                .build();
+
+        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
+        when(tagService.findOrCreateTag(anyString())).thenReturn(tag);
+
+        //when
+        postService.update(updateDto);
+
+        //then
+        verify(postRepository, times(1)).findById(anyLong());
+        verify(userRepository, times(1)).findByUsername(anyString());
+        verify(tagService, times(updateDto.getTagNames().size())).findOrCreateTag(anyString());
+    }
+
+    @DisplayName("게시글 작성자가 아닌 사용자는 게시글 수정할 수 없다.")
+    @Test
+    public void 작성자가_아닌_사용자_게시글_수정_실패() {
+        //given
+        User notWriter = User.builder()
+                .username("garam1234")
+                .email("kgr@naver.com")
+                .build();
+        PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
+                .postId(post.getId())
+                .username(notWriter.getUsername())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .tagNames(List.of(tag.getName()))
+                .build();
+
+        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(notWriter));
+
+        //when then
+        assertThatThrownBy(() -> postService.update(updateDto))
+                .isInstanceOf(BusinessException.class)
+                .extracting("errorCode")
+                .usingRecursiveComparison()
+                .isEqualTo(ErrorCode.POST_WRITER_NOT_MATCH_EXCEPTION);
+
+        verify(postRepository, times(1)).findById(anyLong());
+        verify(userRepository, times(1)).findByUsername(anyString());
+    }
+
+    @DisplayName("수정하려는 게시글이 없으면 예외가 발생한다.")
+    @Test
+    void 수정하려는_게시글이_없을때_예외_발생() {
+        //given
+        PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
+                .postId(post.getId())
+                .username(user.getUsername())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .tagNames(List.of(tag.getName()))
+                .build();
+
+        when(postRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+        //when then
+        assertThatThrownBy(() -> postService.update(updateDto))
+                .isInstanceOf(BusinessException.class)
+                .extracting("errorCode")
+                .usingRecursiveComparison()
+                .isEqualTo(ErrorCode.POST_NOT_FOUND_EXCEPTION);
+
+        verify(postRepository, times(1)).findById(anyLong());
+    }
+
+    @DisplayName("수정하려는 게시글의 사용자가 존재하지 않으면 예외가 발생한다.")
+    @Test
+    void 수정하려는_게시글_사용자가_없을때_예외_발생() {
+        //given
+        PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
+                .postId(post.getId())
+                .username(user.getUsername())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .tagNames(List.of(tag.getName()))
+                .build();
+
+        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        when(userRepository.findByUsername(anyString())).thenReturn(Optional.empty());
+
+        //when then
+        assertThatThrownBy(() -> postService.update(updateDto))
+                .isInstanceOf(BusinessException.class)
+                .extracting("errorCode")
+                .usingRecursiveComparison()
+                .isEqualTo(ErrorCode.USER_NOT_FOUND_EXCEPTION);
+
+        verify(postRepository, times(1)).findById(anyLong());
+        verify(userRepository, times(1)).findByUsername(anyString());
+    }
+
+    @DisplayName("수정하려는 게시글에 태그 이름이 유효하지 않으면 예외가 발생한다.")
+    @ValueSource(strings = {"", "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa", " "})
+    @ParameterizedTest
+    void 수정하려는_게시글_유효하지_않은_태그를_갖으면_예외_발생(String tagName) {
+        //given
+        PostUpdateRequestDto updateDto = PostUpdateRequestDto.builder()
+                .postId(post.getId())
+                .username(user.getUsername())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .tagNames(List.of(tagName))
+                .build();
+
+        when(postRepository.findById(anyLong())).thenReturn(Optional.of(post));
+        when(userRepository.findByUsername(anyString())).thenReturn(Optional.of(user));
+        when(tagService.findOrCreateTag(anyString())).thenThrow(new BusinessException(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION));
+
+        //when then
+        assertThatThrownBy(() -> postService.update(updateDto))
+                .isInstanceOf(BusinessException.class)
+                .extracting("errorCode")
+                .usingRecursiveComparison()
+                .isEqualTo(ErrorCode.TAG_NAME_NOT_VALID_EXCEPTION);
+
+        verify(postRepository, times(1)).findById(anyLong());
+        verify(userRepository, times(1)).findByUsername(anyString());
+        verify(tagService, times(1)).findOrCreateTag(anyString());
+    }
 }
